[package]
name = "rtoml"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/saizo80/rtoml"
authors = ["saizo <saizo@simplemail.is>"]
description = "toml file parser written in Rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argparse = "0.2.2"
log = "0.4.20"
sensible-env-logger = { version = "0.3.2", features = ["local-time"] }
toml = "0.7.6"
